--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,8 @@
 @import "utils/fonts";
 @import "utils/variables";
 
+@import "components/button";
+
 @import "layouts/container";
 @import "layouts/header";
 @import "layouts/main";
