--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -9,10 +9,9 @@ html {
 }
 
 body {
-  font-family: Poppins, sans-serif;
+  font-family: 'Poppins', 'sans-serif';
   font-size: 14px;
   font-weight: 500;
-  line-height: 1.5;
   margin: 0;
   color: var(--color-primary-text-dark);
   background-color: var(--color-primary-body);
