--- a/src/style/layouts/_header.scss
+++ b/src/style/layouts/_header.scss
@@ -1,7 +1,6 @@
 .header {
   display: flex;
   align-items: center;
-  padding: 37px 28px;
   gap: 8px;
 
   &__icon {
@@ -17,7 +16,8 @@
   &__title {
     font-weight: 600;
     font-size: 26px;
-    letter-spacing: 0.26px
+    letter-spacing: 0.26px;
+    height: 39px;
   }
 
   &__version {
