--- a/src/style/layouts/_main.scss
+++ b/src/style/layouts/_main.scss
@@ -1,3 +1,11 @@
 .main {
+  padding: 41px 71px;
+  display: flex;
+  flex-direction: column;
+  gap: 51px;
 
+  &__title {
+    font-size: 24px;
+    font-weight: 400;
+  }
 }
