--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,8 +1,10 @@
 @import "utils/variables";
 
 @import "components/button";
+@import "components/table";
 
 @import "layouts/container";
+@import "layouts/container-table";
 @import "layouts/header";
 @import "layouts/main";
 @import "layouts/menu";
