--- a/src/style/utils/_variables.scss
+++ b/src/style/utils/_variables.scss
@@ -1,7 +1,9 @@
 :root {
   --color-primary-body: #F7F4FF;
   --color-primary-background: #FFFFFF;
-  --color-secondary-background: #FAFBFF;
+  --color-secondary-background: #f0f1f6;
+  --color-secondary-background-search: #F9FBFF;
+  --color-secondary-icon-search: #7E7E7E;
   --color-primary-text-dark: #000000;
   --color-primary-text-light: #9197B3;
   --color-primary-active-text: #008767;
@@ -13,5 +15,6 @@
   --color-secondary-text-version: #838383;
   --color-secondary-text-light: #B5B7C0;
   --color-secondary-text-dark: #757575;
+  --color-secondary-text-darked: #292D32;
   --color-secondary-point-active: #5932EA;
 }
