--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,3 +1,4 @@
+@import "utils/utils";
 @import "utils/variables";
 
 @import "components/button";
@@ -5,6 +6,7 @@
 
 @import "layouts/container";
 @import "layouts/container-table";
+@import "layouts/footer";
 @import "layouts/header";
 @import "layouts/main";
 @import "layouts/menu";
