--- a/src/style/utils/_variables.scss
+++ b/src/style/utils/_variables.scss
@@ -16,5 +16,8 @@
   --color-secondary-text-light: #B5B7C0;
   --color-secondary-text-dark: #757575;
   --color-secondary-text-darked: #292D32;
-  --color-secondary-point-active: #5932EA;
+  --color-secondary-pagination-active: #5932EA;
+  --color-secondary-pagination: #F5F5F5;
+  --color-secondary-pagination-border: #EEEEE;
+  --color-secondary-pagination-text: #404B52;
 }
