--- a/src/style/utils/_variables.scss
+++ b/src/style/utils/_variables.scss
@@ -21,3 +21,8 @@
   --color-secondary-pagination-border: #EEEEE;
   --color-secondary-pagination-text: #404B52;
 }
+
+$media-desktop: 1024px;
+$media-tablet: 768px;
+$media-mobile: 640px;
+$media-mobile-sm: 480px;
