--- a/src/style/components/_table.scss
+++ b/src/style/components/_table.scss
@@ -1,99 +1,191 @@
 .table {
   width: 100%;
 
-  &__container-head {
+  &__content-head {
+    text-align: left;
+    table-layout: auto;
     width: 100%;
+    color: var(--color-secondary-text-darked);
+    font-weight: 500;
+    border-collapse: collapse;
 
-    &:after {
-      content: "";
-      width: 100%;
+    @media screen and (max-width: $media-tablet) {
       display: block;
-      border-bottom: 1px solid var(--color-primary-body);
     }
   }
 
   &__head {
+    height: 49px;
     color: var(--color-secondary-text-light);
     font-weight: 500;
     letter-spacing: -0.14px;
+
+    @media screen and (max-width: $media-tablet) {
+      display: block;
+      position: absolute;
+      top: -9999px;
+      left: -9999px;
+    }
   }
 
-  &__content {
-    text-align: left;
-    table-layout: fixed;
-    width: 100%;
-    padding: 0 37px;
-    color: var(--color-secondary-text-darked);
-    font-weight: 500;
+  &__head-row {
+    @media screen and (max-width: $media-tablet) {
+      position: absolute;
+      top: -9999px;
+      left: -9999px;
+    }
   }
 
   &__head-cell {
-    padding: 8px 0 14px 0;
+    padding: 0;
+    border-bottom: 1px solid var(--color-primary-body);
+    text-wrap: nowrap;
+
+    @media screen and (max-width: $media-tablet) {
+      display: block;
+    }
 
     &--first {
-      width: 169px;
+      width: 21.5%;
+      padding-left: 38px;
     }
 
     &--second {
-      width: 130px;
+      width: 13.5%;
     }
 
     &--third {
-      width: 155px;
+      width: 16.5%;
     }
 
     &--fourth {
-      width: 205px;
+      width: 21%;
     }
 
     &--fifth {
-      width: 140px;
+      width: 16%;
     }
 
     &--sixth {
-      padding-left: 10px;
+      width: 13.5%;
+      padding-right: 10px;
+    }
+  }
+
+  &__content-body {
+    width: 100%;
+    padding: 0 38px;
+    letter-spacing: -0.14px;
+
+    @media screen and (max-width: $media-tablet) {
+      display: block;
+      padding: 0;
+    }
+  }
+
+  &__body {
+    @media screen and (max-width: $media-tablet) {
+      display: block;
     }
   }
 
   &__row {
-   height: 65px;
+    height: 69px;
+    display: flex;
+    align-items: center;
+
+    @media screen and (max-width: $media-tablet) {
+      display: block;
+      border-bottom: 1px solid var(--color-primary-body);
+      padding: 0 37px;
+      height: auto;
+    }
   }
 
   &__cell {
-    //height: 69px;
-    //padding: 16px 0px 25px 0;
+    text-wrap: nowrap;
+    padding: 18px 0;
     letter-spacing: -0.14px;
     border-bottom: 1px solid var(--color-primary-body);
 
+    @media screen and (max-width: $media-tablet) {
+      display: flex;
+      position: relative;
+      border-bottom: none;
+      padding: 10px 0 10px 50%;
+
+      &:before {
+        position: absolute;
+        top: 3px;
+        left: 6px;
+        width: 45%;
+        color: var(--color-secondary-text-light);
+        font-weight: 500;
+        letter-spacing: -0.14px;
+        padding: 10px;
+      }
+
+      &:nth-of-type(1):before {
+        content: "Customer Name";
+      }
+      &:nth-of-type(2):before {
+        content: "Company";
+      }
+      &:nth-of-type(3):before {
+        content: "Phone Number";
+      }
+      &:nth-of-type(4):before {
+        content: "Email";
+      }
+      &:nth-of-type(5):before {
+        content: "Country";
+      }
+      &:nth-of-type(6):before {
+        content: "Status";
+      }
+    }
+
     &--first {
-      width: 169px;
+      width: 19.1%;
     }
 
     &--second {
-      width: 130px;
+      width: 15%;
     }
 
     &--third {
-      width: 155px;
+      width: 17.6%;
     }
 
     &--fourth {
-      width: 205px;
+      width: 24%;
     }
 
     &--fifth {
-      width: 140px;
+      width: 15.6%;
+    }
+
+    &--sixth {
+      width: 9.7%;
+      padding: 14px 0;
+
+      @media screen and (max-width: $media-tablet) {
+        padding: 10px 0 10px 50%;
+      }
     }
   }
 
   &__button {
-    width: 78px;
-    height: 29px;
     display: flex;
+    width: 80px;
     justify-content: center;
     align-items: center;
     font-weight: 500;
     border-radius: 4px;
-    padding-left: 2px;
+    padding: 6px 12px;
+
+    @media screen and (max-width: $media-tablet) {
+      display: block;
+    }
   }
 }
