--- a/src/style/layouts/_main.scss
+++ b/src/style/layouts/_main.scss
@@ -3,6 +3,31 @@
   display: flex;
   flex-direction: column;
   gap: 51px;
+  width: 100%;
+
+  @media screen and (max-width: $media-tablet) {
+    padding: 20px;
+    gap: 28px;
+  }
+
+  &__top {
+    display: flex;
+    gap: 158px;
+  }
+
+  &__burger {
+    display: none;
+
+    @media screen and (max-width: $media-tablet) {
+      background-color: transparent;
+      border: none;
+      display: block;
+      height: 24px;
+      width: 24px;
+      padding: 0;
+      fill: var(--color-primary-text-light);
+    }
+  }
 
   &__title {
     font-size: 24px;
