--- a/src/style/layouts/_menu.scss
+++ b/src/style/layouts/_menu.scss
@@ -5,4 +5,8 @@
   background-color: var(--color-primary-background);
   padding: 36px 28px;
   border-radius: 20px 0 0 20px;
+
+  @media screen and (max-width: $media-tablet) {
+    display: none;
+  }
 }
