--- a/src/style/layouts/_footer.scss
+++ b/src/style/layouts/_footer.scss
@@ -2,6 +2,7 @@
   margin: 25px 38px 41px;
   display: flex;
   align-items: center;
+  gap: 379px;
 
   @media screen and (max-width: $media-tablet) {
     flex-direction: column;
@@ -13,7 +14,7 @@
     font-size: 14px;
     letter-spacing: -0.14px;
     text-wrap: nowrap;
-    padding-right: 42.5%;
+    //padding-right: 42.5%;
 
     @media screen and (max-width: $media-tablet) {
       padding: 0;
