--- a/src/style/layouts/_nav.scss
+++ b/src/style/layouts/_nav.scss
@@ -8,6 +8,11 @@
     gap: 18px;
     display: flex;
     flex-direction: column;
+
+    @media screen and (max-width: $media-tablet) {
+      font-size: 24px;
+      gap: 24px;
+    }
   }
 
   &__list-item {
@@ -18,6 +23,10 @@
     cursor: pointer;
     padding: 10px;
     gap: 100px;
+
+    @media screen and (max-width: $media-tablet) {
+      height: 56px;
+    }
 
     &:active {
       background-color: var(--color-secondary-pagination-active);
@@ -37,6 +46,11 @@
   &__list-container {
     display: flex;
     gap: 14px;
+
+    @media screen and (max-width: $media-tablet) {
+      gap: 24px;
+      width: 100%;
+    }
   }
 
   &__text {
@@ -56,5 +70,10 @@
 
   &__button {
     align-self: end;
+
+    @media screen and (max-width: $media-tablet) {
+      height: 34px;
+      width: 34px;
+    }
   }
 }
