--- a/src/style/layouts/_container-table.scss
+++ b/src/style/layouts/_container-table.scss
@@ -38,6 +38,10 @@
     vertical-align: middle;
     white-space: nowrap;
     position: relative;
+
+    @media screen and (min-width: $media-tablet) {
+      width: 50%;
+    }
   }
 
   &__input input[type="search"] {
@@ -50,6 +54,10 @@
     color: var(--color-secondary-text-light);
     border-radius: 10px;
     letter-spacing: -0.12px;
+
+    @media screen and (min-width: $media-tablet) {
+      width: 100%;
+    }
   }
 
   input[type="search"]::placeholder {
