--- a/src/style/layouts/_footer.scss
+++ b/src/style/layouts/_footer.scss
@@ -7,6 +7,7 @@
   @media screen and (max-width: $media-tablet) {
     flex-direction: column;
     gap: 25px;
+    margin: 25px 0 41px;
   }
 
   &__text {
