--- a/src/style/components/_table.scss
+++ b/src/style/components/_table.scss
@@ -122,7 +122,7 @@
         color: var(--color-secondary-text-light);
         font-weight: 500;
         letter-spacing: -0.14px;
-        padding: 10px;
+        padding: 10px 0;
       }
 
       &:nth-of-type(1):before {
