--- a/src/style/layouts/_main.scss
+++ b/src/style/layouts/_main.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   gap: 51px;
   width: 100%;
+  text-wrap: nowrap;
 
   @media screen and (max-width: $media-tablet) {
     padding: 20px;
@@ -14,7 +15,7 @@
     display: flex;
     gap: 158px;
     @media screen and (max-width: $media-tablet) {
-      gap: 98px
+      gap: 88px
     }
   }
 
